Fix spacing and font sizes for top bar

--- a/www/docs/style/sass/_settings.scss
+++ b/www/docs/style/sass/_settings.scss
@@ -83,8 +83,8 @@ $borders: #e9e9e9;
 
 $topbar-link-color: #fff;
 $topbar-link-color-active: #fff;
-$topbar-title-font-size: em-calc(18);
-$topbar-link-font-size: em-calc(14);
+$topbar-title-font-size: em-calc(24);
+$topbar-link-font-size: em-calc(16);
 $topbar-margin-bottom: em-calc(24);
 $topbar-height: 65px;
 
