--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -14,6 +14,11 @@
     @extend .print-only;
 }
 
+.top-bar-section ul li a:not(.button) {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
 .row {
     padding-top: 1.25em;
     padding-bottom: 1.25em;
